fix(post): center embed if too small

--- a/style/post.css
+++ b/style/post.css
@@ -489,7 +489,7 @@
   text-align: left;
 }
 
-.post-page main>div.post-body>.images {
+.post-page main>div.post-body>.images, .post-page main>div.post-body>.embed {
   text-align: center;
 }
 
